--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "stylelint-config-standard": "^3.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "4",
-    "codecov": "1",
-    "eslint": "1",
-    "eslint-config-jongleberry": "1",
-    "eslint-plugin-react": "3",
-    "eslint-plugin-standard": "1",
-    "ghooks": "1",
-    "mocha": "2",
-    "nyc": "5",
-    "stylelint": "^4.1.0"
+    "babel-eslint": "next",
+    "codecov": "^1.0.0",
+    "eslint": "next",
+    "eslint-config-jongleberry": "^1.0.0",
+    "eslint-plugin-react": "^3.0.0",
+    "eslint-plugin-standard": "^1.0.0",
+    "ghooks": "^1.0.0",
+    "mocha": "^2.0.0",
+    "nyc": "^5.0.0",
+    "stylelint": "^4.2.0"
   },
   "scripts": {
     "lint": "eslint --cache --cache-location node_modules/.cache/eslint lib test",
