--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "eslint": "next",
     "eslint-config-jongleberry": "^1.0.0",
     "eslint-config-standard-jsx": "^1.1.1",
+    "eslint-plugin-promise": "^1.0.8",
     "eslint-plugin-react": "^3.0.0",
     "eslint-plugin-standard": "^1.0.0",
     "ghooks": "^1.0.0",
