--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "devDependencies": {
     "babel-eslint": "next",
     "codecov": "^1.0.0",
-    "eslint": "next",
+    "eslint": "^2.0.0",
     "eslint-config-jongleberry": "^1.3.1",
     "eslint-config-standard-jsx": "^1.1.1",
     "eslint-plugin-promise": "^1.0.8",
