--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "stylelint-config-standard": "^3.0.0"
   },
   "devDependencies": {
-    "babel-eslint": "next",
+    "babel-eslint": "^5.0.0",
     "codecov": "^1.0.0",
     "eslint": "^2.0.0",
     "eslint-config-jongleberry": "^1.0.0",
