--- a/package.json
+++ b/package.json
@@ -9,13 +9,13 @@
     "stylelint-config-standard": "^4.0.1"
   },
   "devDependencies": {
-    "babel-eslint": "^5.0.0",
+    "babel-eslint": "^6.0.0",
     "codecov": "^1.0.0",
-    "eslint": "~2.2.0",
-    "eslint-config-jongleberry": "^2.0.0",
+    "eslint": "^2.5.3",
+    "eslint-config-jongleberry": "^3.0.0",
+    "eslint-plugin-babel": "^3.1.0",
     "eslint-plugin-promise": "^1.0.8",
     "eslint-plugin-standard": "^1.0.0",
-    "ghooks": "^1.0.0",
     "mocha": "^2.0.0",
     "nyc": "^6.0.0",
     "stylelint": "^5.0.1"
@@ -24,11 +24,6 @@
     "lint": "eslint --cache --cache-location node_modules/.cache/eslint lib test",
     "test": "mocha --bail",
     "test-cov": "nyc --cache node_modules/mocha/bin/_mocha && nyc report --reporter=lcov"
-  },
-  "config": {
-    "ghooks": {
-      "pre-push": "npm run lint"
-    }
   },
   "keywords": [
     "stylelint",
